# manga-compressor

./: .gitignore  README.md  pyproject.toml
manga_compressor/: main.py
